--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio
+    </title>
+</head>
+<body>
+    <link rel="stylesheet" href="styles.css">
+    <header>
+       <a href="Herminio Mirabal ">Herminio Mirabal</a>
+        <nav>
+            <a href="#">About</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <h1>About Me</h1> 
+    
+        <img src="HMD.png" alt="My picture">
+    <section>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime animi repellat possimus omnis voluptates rem illo ut maiores, neque commodi explicabo earum adipisci magni sit exercitationem ducimus nulla fugiat. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quod totam labore itaque, error magnam dolore beatae eveniet deleniti et temporibus impedit earum quibusdam? Ea dolorem distinctio quas in dicta!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat quos possimus iure quasi est quae quas molestias quia eum aliquid?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+         </p>
+         </article>
+    </section>
+    <section>
+     <aside>
+        <h2>Connect with me</h2>
+         <nav>
+            <a href="https://github.com/"> <img src="git.png" alt="GitHub Logo"></a>
+            <a href="https://www.linkedin.com/"> <img src="linkedin.png" alt="Linkedin logo"></a>
+            <a href="https://stackoverflow.com/"> <img src="soverflow.png" alt="Stack overflow Logo"></a>
+        </nav>
+        </aside>
+    </section>
+    </main>
 
+
+    
+   
+</body>
+</html>
