--- a/index.html
+++ b/index.html
@@ -29,20 +29,21 @@
          </p>
          </article>
     </section>
-    <section>
-     <aside>
-        <h2>Connect with me</h2>
-         <nav>
+    </main>
+ <aside>
+    <h2>Connect with me</h2>
+        <nav>
             <a href="https://github.com/"> <img src="git.png" alt="GitHub Logo"></a>
             <a href="https://www.linkedin.com/"> <img src="linkedin.png" alt="Linkedin logo"></a>
             <a href="https://stackoverflow.com/"> <img src="soverflow.png" alt="Stack overflow Logo"></a>
         </nav>
-        </aside>
-    </section>
-    </main>
+</aside>
 
+<footer>
+   <p>
+    &copy; 2022 Herminio
+   </p> 
+</footer>
 
-    
-   
 </body>
 </html>
